--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Responsive Design -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Title -->
 		<title>Twimba</title>
 		<!-- CSS -->
 		<link rel="stylesheet" href="index.css">
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://foynts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" 
+		      rel="stylesheet">
+		<!-- Font Awesome CDN Icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+			  integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+			  crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
 		<header>
@@ -18,10 +25,11 @@
 		<main>
 			<div class="tweet-input-area">
 				<img src="images/scrimbalogo.png" class="profile-pic">
+				<textarea id="tweet-input" placeholder="What's happening?"></textarea>
 			</div>
 			<button id="tweet-btn">Tweet</button>
 			<div class="feed" id="feed"></div>
 		</main>
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
